2007-09-18  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=15169
          Freeze on Google maps using the "Dig a hole" tool
          <rdar://problem/5477414>

        Test: fast/dom/CSSStyleDeclaration-empty-string-property.html

        * bindings/js/JSCSSStyleDeclarationCustom.cpp:
        (WebCore::cssPropertyName): Added an early return if the property name
        is the empty string, thus avoiding a loop that is not prepared for that
        case.

2007-09-19  Darin Adler <darin@apple.com>

        Reviewed by Adam.

        - fix <rdar://problem/5415734> <select> draws incorrectly if size of menu options
          is changed after it pops up once

        * platform/win/PopupMenuWin.cpp:
        (WebCore::PopupMenu::PopupMenu): Removed unnecessary initialization of IntRect.
        (WebCore::PopupMenu::show): Check that the clientRect is empty instead of checking
        the entire windowRect -- this fixes a bug where we pop up a tiny 2-pixel high black
        box when you click on an empty menu.
        (WebCore::PopupMenu::visibleItems): Base the number of items on the client rect
        instead of the window rect. Rounding down means this would have worked anyway, but
        it's more correct to do it this way.
        (WebCore::PopupMenu::paint): Deallocate the bitmap so it gets reallocated if it
        has the wrong width or height (or if GetObject returns false, which should not
        happen in practice).

2007-09-18  David Harrison  <harrison@apple.com>

        Reviewed by Darin.

        <rdar://problem/5486974> REGRESSION(r25373): 1/4 second to doubleclick word in GMail when using Kotoeri IM, also slow in other IMs (15163)

        Updated tests:
        * fast/dom/Window/window-xy-properties-expected.txt:
        * fast/dom/plugin-attributes-enumeration-expected.txt:
        * fast/events/onerror-bubbling-expected.txt:
        * fast/events/related-target-expected.txt: